@@ -1,5 +1,6 @@
 # next
 
+- Fixes switching to Queue doesn't have focus on song list for keyboard navigation
 - Fixes missing icons in breeze icon theme
 
 # 5.2
